--- a/index.html
+++ b/index.html
@@ -40,25 +40,70 @@
         <li>Assisted in debugging and improving backend API performance.</li>
       </ul>
 
-
-
       <p class="mt-2 font-bold">Machine Learning Intern</p>
       <p>XYZ AI Labs | Jan 2023 - May 2023</p>
       <ul class="list-disc ml-8 mt-2">
         <li>
-          Built and trained ML models using Python, TensorFlow, and Scikit-Learn for predictive analytics.
+          Built and trained ML models using Python, TensorFlow, and Scikit-Learn
+          for predictive analytics.
         </li>
         <li>
-          Worked on a sentiment analysis project, achieving 85% accuracy in classifying customer reviews.
+          Worked on a sentiment analysis project, achieving 85% accuracy in
+          classifying customer reviews.
         </li>
-        <li>Optimized data preprocessing pipelines, improving model training efficiency.
+        <li>
+          Optimized data preprocessing pipelines, improving model training
+          efficiency.
         </li>
       </ul>
+      <br />
+      <p class="text-2xl font-medium">Projects</p>
+      <hr class="h-1 bg-gray-100 border-0 rounded-sm dark:bg-gray-700" />
+      <p class="mt-2 font-bold">Smart Attendance System</p>
+      <p class="italic">Technologies Used: Python, OpenCV, TensorFlow</p>
+      <ul class="list-disc ml-8 mt-2">
+        <li>
+          Developed a face recognition-based attendance system using OpenCV and
+          deep learning.
+        </li>
+        <li>
+          Integrated with a database (MySQL) to store and retrieve attendance
+          records.
+        </li>
+        <li>
+          Reduced manual attendance errors by 95% and improved efficiency in
+          classrooms.
+        </li>
+      </ul>
+      <br />
 
+      <p class="text-2xl font-medium">Education</p>
+      <hr class="h-1 bg-gray-100 border-0 rounded-sm dark:bg-gray-700" />
+      <p class="mt-2 font-bold">
+        Indian Institute of Technology (IIT) Delhi | 2016 – 2020
+      </p>
+      <ul class="list-disc ml-8 mt-2">
+        <li>CGPA: 9.6 / 10</li>
+        <li>Honors: Gold Medalist, Dean’s List</li>
+      </ul>
 
+      <p class="mt-2 font-bold">Kendriya Vidyalaya Old Cantt (Class 12)</p>
+      <ul class="list-disc ml-8 mt-2">
+        <li>Percentage: 74%</li>
+      </ul>
 
+      <p class="mt-2 font-bold">Kendriya Vidyalaya Old Cantt (Class 10)</p>
+      <ul class="list-disc ml-8 mt-2">
+        <li>Percentage: 74%</li>
+      </ul>
 
-
+      <p class="text-2xl font-medium">Achievements</p>
+      <hr class="h-1 bg-gray-100 border-0 rounded-sm dark:bg-gray-700" />
+      <p class="italic mb-20">
+        State-level football player, hackathon winner, top performer in coding
+        competitions, certified in cybersecurity, and recognized for
+        contributions to tech initiatives.
+      </p>
     </div>
   </body>
 </html>
